 * Add new notification message STREAM_NOT_ENCRYPTED. When stream is not
   encrypted no NO_CODE_WORD notifications are sent.
 * Add --notify-wait (-9) option (not set by default). Using it prevents
   running of several notification scripts in parallel which can lead to
   races if the scripts are used for logging.
 * Start passing _INPUT_ADDR and _OUTPUT_ADDR variables to notify script.

2013-09-12 : Version 10.0
 * Add --ecm-only (-v) option. This allows processing of ECMs but without
   decoding the input stream.
 * Add --ecm-and-emm-only (-q) option. This allows processing of ECMs
   and EMMs but without decoding the input stream.
 * Set newcamd client id to 0x7878 (tsdecrypt).
 * Fixed regression that apeared in 9.0 which prevented the output from
   working if the output address was not multicast.
 * Add support for Griffin CAS and for DGCrypt CAS.
 * Add support for setting multicast source address /SSM/ (--input-source).
 * Add support for EMM filters similar to DVBAPI filters (match + mask).
 * Add support for EMM filters based on section length.
 * Add support for Irdeto CHID filtering (tested with Raduga).

2012-09-10 : Version 9.0
 * Add --no-output-on-error (-u) option. By using this option output can be
   disabled if there is no currently received code word.
 * Remove deprecated --output-filter option. The option you should use is
  --no-output-filter.
 * Allow camd server address (--camd-server, -s) to be resolved, not only
   set by IP address.
 * Allow tsdecrypt to read ECM/EMM packet from text file. The added
   parameters are -n, -ecm-file <file> and -m --emm-file <file>.
 * Add support for CAMD server listening on IPv6.
 * Add support for input and output over IPv6.
 * Add support for forcing only IPv4 (-4, --ipv4) or only IPv6 (-6, --ipv6).
 * Add support for multiple CAMD addresses returned when resolving CAMD
   server hostname. tsdecrypt would try each of the addresses and use
   the one that works.